--- a/CPF-CACL.GestaoSocio.UI.MVC/Views/TipoPagamento/Index.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Views/TipoPagamento/Index.cshtml
@@ -56,8 +56,7 @@
                                 <tr>
                                     <th scope="col">#</th>
                                     <th scope="col">Nome</th>
-                                    <th scope="col">Criação</th>
-                                    <th scope="col">Status</th>
+                                    <th scope="col">Registo</th>
                                     <th scope="col">Actualização</th>
                                     <th scope="col">Acão</th>
                                 </tr>
@@ -71,7 +70,6 @@
                                             <th scope="row">@tipoPagamento.Id</th>
                                             <td>@tipoPagamento.Nome</td>
                                             <td>@tipoPagamento.DataCriacao</td>
-                                            <td>@tipoPagamento.Status</td>
                                             <td>@tipoPagamento.DataAtualizacao</td>
                                             <td>
                                                 <div class="dropdown">
