--- a/CPF-CACL.GestaoSocio.UI.MVC/Views/Organismo/Index.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Views/Organismo/Index.cshtml
@@ -25,32 +25,60 @@
 } *@
 
 
+<div id="loading-overlay" style="display: none;">
+    <div id="loading-circle">
+        <i class="fas fa-circle-notch fa-spin"></i> Carregando...
+    </div>
+</div>
+
+<div class="page-header">
+    <div class="row">
+        <div class="col-12 col-md-12 col-sm-12">
+            <nav class="col-12 col-md-12 col-sm-12" aria-label="breadcrumb" role="navigation">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="/Home/Index">Home</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Listagem de Organismos</li>
+                </ol>
+            </nav>
+        </div>
+    </div>
+</div>
+
+
 <div class="row espaco">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-body cabecalho">
+                <div class=" container col-12 col-md-12 col-lg-12">
+                    <!--Para abrir o Modal-->
+                    <div id="PlaceHolderHere"></div>
+                    <div class="col-12 col-md-12 col-lg-12">
+                        <div class="d-grid gap-2 d-md-flex justify-content-md-startcol-12 col-md-12 col-lg-12 ">
+                            <div class="col-12 col-sm-4 col-md-4">
+                                <button type="button" class="btn btn-primary  form-control" data-toggle="ajax-modal" data-target="#organismo" data-url="@Url.Action("Create")"><i class="fa fa-plus"></i> Adicionar Novo</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
     <div class="col-12 col-md-12 col-lg-12">
         <div class="card">
             <div class="margem-container card-body">
                 <div class="margens col-12 col-md-12 col-lg-12">
-                    <!--Para abrir o Modal-->
-                    <div id="PlaceHolderHere"></div>
                     <div class="text-center col-12 col-md-12 col-lg-12">
-
-                        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                            <button type="button" class="btn btn-outline-primary" data-toggle="ajax-modal" data-target="#organismo" data-url="@Url.Action("Create")"><i class="fa fa-plus"></i>Adicionar Novo</button>
-                            @* <a role="button" data-toggle="ajax-modal" data-target="#municipio" data-url="@Url.Action("Create")" class="btn btn-primary">Adicionar novo Municipio</a> *@
-                        </div>
-                        <br />
-
-                        <h3 class="display-6">Listagem de Organismos</h3>
-
-                        <table class="table table-responsive teste col-12 col-md-12 col-lg-12" style="--num-colunas: 6;" id="myDataTable">
-                            <thead class="navbar-blue">
+                        <table class="table table-responsive stripe table-hover col-12 col-md-12 col-lg-12" style="--num-colunas: 5;" id="myDataTable">
+                            <thead class="navbar-primary">
                                 <tr>
                                     <th scope="col">#</th>
                                     <th scope="col">Nome</th>
-                                    <th scope="col">Criação</th>
-                                    <th scope="col">Status</th>
+                                    <th scope="col">Registo</th>
                                     <th scope="col">Actualização</th>
-                                    <th scope="col"> </th>
+                                    <th scope="col">Ação</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -62,7 +90,6 @@
                                             <th scope="row">@organismo.Id</th>
                                             <td>@organismo.Nome</td>
                                             <td>@organismo.DataCriacao</td>
-                                            <td>@organismo.Status</td>
                                             <td>@organismo.DataAtualizacao</td>
                                             <td>
                                                 <div class="dropdown">
@@ -70,8 +97,8 @@
                                                         <i class="dw dw-more"></i>
                                                     </a>
                                                     <div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-                                                        <a class="dropdown-item" href="" onclick="SetUser('@organismo.Id', '@organismo.Nome')" data-toggle="modal" data-target="#defaultModalEditarUser"><i class="dw dw-edit2"></i> Editar</a>
-                                                        <a class="dropdown-item" href="#" onclick="SetUser('@organismo.Id', '@organismo.Nome')" data-toggle="modal" data-target="#defaultModalInactivateUser"><i class="dw dw-delete-3"></i> Eliminar</a>
+                                                        <a class="dropdown-item" href="" onclick="SetUser('@organismo.Id', '@organismo.Nome')" data-toggle="modal" data-target="#editarOrganismo"><i class="dw dw-edit2"></i> Editar</a>
+                                                        <a class="dropdown-item" href="#" onclick="SetUser('@organismo.Id', '@organismo.Nome')" data-toggle="modal" data-target="#eliminarOrganismo"><i class="dw dw-delete-3"></i> Eliminar</a>
                                                     </div>
                                                 </div>
                                             </td>
@@ -82,6 +109,61 @@
                         </table>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!---------MODAL---------->
+<!---------Modal para Edição--------------->
+
+<div class="modal fade" id="editarOrganismo" tabindex="-1" role="dialog" style="display: none;">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="cabecalhoModalEditarOrganismo">Editar Organismo</h4>
+                <input type="hidden" id="OrganismoId" name="OrganismoId" />
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <input type="hidden" id="organismoId" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label for="nomeOrganismo" class="control-label">Nome do Organismo</label>
+                        <input id="nomeOrganismo" name="nomeOrganismo" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <input type="hidden" id="dataCriacao" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <input type="hidden" id="dataAtualizacao" value="@DateTime.Now" class="form-control" />
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" onclick="EditarOrganismo()" class="btn btn-success waves-effect">Salvar</button>
+                <button type="button" class="btn btn-link waves-effect" data-dismiss="modal">Cancelar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--------Modal para eliminar----------->
+
+<div class="modal fade" id="eliminarOrganismo" tabindex="-1" role="dialog" style="display: none;">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="eliminarOrganismoLabel">Eliminar Organismo</h4>
+            </div>
+            <div class="modal-body">
+                <label id="id" name="id" />
+                Desejas eliminar este Organismo <b><label id="nome"></label></b>?
+            </div>
+            <div class="modal-footer">
+                <button type="button" onclick="EliminarOrganismo()" class="btn btn-danger waves-effect">Eliminar</button>
+                <button type="button" class="btn btn-link waves-effect" data-dismiss="modal">Cancelar</button>
             </div>
         </div>
     </div>
