--- a/CPF-CACL.GestaoSocio.UI.MVC/Views/_ViewImports.cshtml
+++ b/CPF-CACL.GestaoSocio.UI.MVC/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using CPF_CACL.GestaoSocio.UI.MVC
 @using CPF_CACL.GestaoSocio.UI.MVC.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, CPF_CACL.GestaoSocio.UI.MVC
